Final bug squashing on svg stuff for Safari

--- a/compass_base/sass/modules/_content.scss
+++ b/compass_base/sass/modules/_content.scss
@@ -316,9 +316,6 @@
   bottom: 0;
   margin: auto;
 }
-.helmet-right {
-  left: 0;
-}
 .helmet-left {
   right: 0;
 }
